# Mascap

./: README.md  _code  code  doc.md  mascap.cabal  run
.stack-work/install/x86_64-linux-nopie/lts-9.0/8.0.2/flag-cache/: mascap-0.1.0.0  mascap-0.1.0.0-GbGNDWaFdDGF8SNp5yR0EX  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6
.stack-work/install/x86_64-linux-nopie/lts-9.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/mascap-0.1.0.0-GbGNDWaFdDGF8SNp5yR0EX/: Lib.hi
app/: Joy.hs  Main.hs  Mascap.hs  Mascarpone.hs  Prefix.hs
