name:                mascap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mascap#readme
license:             BSD3
author:              BlackCap
copyright:           2017 BlackCap
category:            Recreational
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mascap
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , mtl
  default-language:    Haskell2010
  other-modules:       Mascarpone, Mascap, Joy, Prefix
